# MLIR-Scheduling-Kernel

./: CMakeLists.txt  CMakeLists.txt.save  README.md  Requirements.md  TRADEOFFS.md
Hello_MLIR/: CMakeLists.txt  test.mlir
Hello_MLIR/include/: CMakeLists.txt
Hello_MLIR/include/MyDialect/: CMakeLists.txt
Hello_MLIR/lib/MyDialect/: MyDialect.cpp
Hello_MLIR/tools/my-opt/: CMakeLists.txt
MatMUL/: MATMUL.md  main.c  matmul.ll
Toy/: c_make_commands.txt
Toy_Tutorial/: main.cpp
attention-opt/: attention-opt.cpp
attention-opt/standalone-opt/: CMakeLists.txt  standalone-opt.cpp
examples/Hello_MLIR/: CMakeLists.txt
examples/Hello_MLIR/include/MyDialect/: MyDialect.h  (+1 more)
examples/MatMUL/: matmul  matmul.mlir  matmul_llvm.mlir
examples/Toy/: notes.txt  toy_language_examples
examples/Tutorial/: Tutorial.md  vec_add.ll  vec_add.mlir  vec_add_llvm.mlir
include/Attention/: AttentionDialect.h  AttentionDialect.td  AttentionOps.h  AttentionOps.td  AttentionPasses.h  AttentionPasses.td  AttentionTypes.h  AttentionTypes.td  CMakeCache.txt  CMakeLists.txt
include/Standalone-c/: Dialects.h
latex/: README.md
latex/designs/academic-article/: design.sty
latex/papers/mlir-hpc/: refs.bib
latex/papers/mlir_parallel_vector_multiplication/: main.tex
latex2/papers/mlir-hpc/: content.tex  main.tex
lib/: CMakeLists.txt
lib/Attention/: AttentionDialect.cpp  AttentionOps.cpp  AttentionPasses.cpp  AttentionTypes.cpp  CMakeLists.txt  TilingPass.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Attention/: dummy.mlir
vector_addition/: Tutorial.md  main.c  vec_add
(+3 files in other folders)
